Pagina registrar creada
Servicio registrar creado
Pagina registrar creada
Telefonos en formulario registrar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
     "files.exclude": {
-        "tsconfig.spec.json": true,
-        "tsconfig.json": true,
-        "tsconfig.app.json": true,
-        "package-lock.json": true,
-        ".gitignore": true,
-        ".eslintrc.json": true,
-        ".editorconfig": true,
-        ".browserslistrc": true,
-        "src\\environments": true,
-        "node_modules": true,
-        ".angular": true,
-        ".vscode": true,
-        "karma.conf.js": true,
-        "capacitor.config.ts": true,
-        "ionic.config.json": true,
-        "angular.json": true,
-        "src\\assets": true,
-        "src\\app\\app.component.scss": true,
-        "src\\theme": true
+        "tsconfig.spec.json": false,
+        "tsconfig.json": false,
+        "tsconfig.app.json": false,
+        "package-lock.json": false,
+        ".gitignore": false,
+        ".eslintrc.json": false,
+        ".editorconfig": false,
+        ".browserslistrc": false,
+        "src\\environments": false,
+        "node_modules": false,
+        ".angular": false,
+        ".vscode": false,
+        "karma.conf.js": false,
+        "capacitor.config.ts": false,
+        "ionic.config.json": false,
+        "angular.json": false,
+        "src\\assets": false,
+        "src\\app\\app.component.scss": false,
+        "src\\theme": false
     }
 }
